--- a/20251109005.html
+++ b/20251109005.html
@@ -83,7 +83,7 @@
             <div class="w">
                 <div class="detail-main">
                     <div class="detail-top">
-                        <h2 class="title">一种医用杀菌臭氧雾化治疗仪</h2>
+                        <h2 class="title">一种垃圾存放装置</h2>
 
                         <div class="func">
                             <a class="btn sml"title="发明专利">实用新型专利</a>
@@ -94,20 +94,22 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告号：</dt><dd>CN218187530U</dd></dl>
-                            <dl><dt>授权公告日：</dt><dd>2023.01.03</dd></dl>
-                            <dl><dt>申请号：</dt><dd>2022214430857</dd></dl>
-                            <dl><dt>申请日：</dt><dd>2022.06.09</dd></dl>
-                            <dl><dt>专利权人：</dt><dd>陈丽萍</dd></dl>
-                            <dl><dt>地址：</dt><dd>435300湖北省黄冈市蕲春县漕河镇漕河大道</dd></dl>
-                            <dl><dt>发明人：</dt><dd>陈丽萍;曹洪彬;郝苗苗;于麦芸</dd></dl>
-                            <dl><dt>分类号：</dt><dd>A61M31/00(2006.01)I;A61M11/00(2006.01)I</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN220148240U</dd></dl>
+                            <dl><dt>授权公告日：</dt><dd>2023.12.08</dd></dl>
+                            <dl><dt>申请号：</dt><dd>2023216197870</dd></dl>
+                            <dl><dt>申请日：</dt><dd>2023.06.26</dd></dl>
+                            <dl><dt>专利权人：</dt><dd>张琼</dd></dl>
+                            <dl><dt>地址：</dt><dd>530021广西南宁市良庆区良玉大道50号广西医科大学附属肿瘤医院(五象院区)</dd></dl>
+                            <dl><dt>发明人：</dt><dd>张琼;吴雨鲭;李盼盼;李晓霞</dd></dl>
+                            <dl><dt>分类号：</dt><dd>B65F1/14(2006.01)I;B65F1/16(2006.01)I;B65F7/00(2006.01)I</dd></dl>
+                            <dl><dt>专利代理机构：</dt><dd>重庆博观星辉专利代理事务所(特殊普通合伙)</dd></dl>
+                            <dl><dt>专利代理师：</dt><dd>文超</dd></dl>
                         </div>
 
                         <div class="intro">
                             <dl>
                                 <dt>摘要：</dt>
-                                <dd>本实用新型公开了一种医用杀菌臭氧雾化治疗仪，包括治疗仪外壳，所述治疗仪外壳的底壁上转动连接有多个移动轮，所述治疗仪外壳的外侧设置有一个固定喷头，所述治疗仪外壳的下内壁上固定连接有一个臭氧罐，所述臭氧罐内滑动连接有一块按压板，所述臭氧罐上设置有一根连接管，所述连接管贯穿臭氧罐的上内壁伸入到臭氧罐的内部与按压板相连接，且所述按压板上开设有一个与连接管相通的连接口，所述连接管位于臭氧罐外侧的部分上固定套设有一块连接板。本实用新型按压板会随着臭氧的减小而下压，使臭氧的气压保持在一定的范围内，有利于臭氧的喷出，同时设置有报警器，能在臭氧量不足或臭氧量过多时报警，有利于装置的使用。</dd>
+                                <dd>本实用新型涉及医疗技术领域，具体为一种垃圾存放装置，包括箱体与箱盖，箱体的背端转动安装有箱盖，箱体的内部左侧嵌入安装有锐器盒，箱体的内部右端开设有消毒存放柜；该装置通过设置有消毒存放柜，箱盖盖住时压动箱体右端的按压块，按压块向下压动带动压块向下压动，进而对放置在消毒存放柜内部的消毒液进行压动，消毒液存放柜内部进行喷洒，对刚存放的垃圾进行消毒，防止交叉感染，而在下一次打开箱盖进行存放时，消毒液存放柜内的弹簧带动活动柱向上弹起，而后活动柱带动压块与按压块向上弹起复位，消毒液上端的喷洒头也复位，可以进行下一次喷洒，方便操作，不需要人员专门进行喷洒，在每次开关箱盖时就可以进行消毒喷洒作业。</dd>
                             </dl>
                         </div>
 
