--- a/20251109006.html
+++ b/20251109006.html
@@ -94,22 +94,22 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告号：</dt><dd>2023230190404</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN221406321U</dd></dl>
                             <dl><dt>授权公告日：</dt><dd>2024.07.23</dd></dl>
                             <dl><dt>申请号：</dt><dd>2023230190404</dd></dl>
                             <dl><dt>申请日：</dt><dd>2023.11.09</dd></dl>
                             <dl><dt>专利权人：</dt><dd>临西县人民医院</dd></dl>
                             <dl><dt>地址：</dt><dd>054900 河北省邢台市临西县阳光大街与辽河路交叉口往西180米临西县人民医院</dd></dl>
                             <dl><dt>发明人：</dt><dd>修坤慧;任骏;夏玲玲;章潘月</dd></dl>
-                            <dl><dt>分类号：</dt><dd>G03D3/08(2006.01)I</dd></dl>
-                            <dl><dt>专利代理机构</dt><dd>重重庆博观星辉专利代理事务所(特殊普通合伙)</dd></dl>
+                            <dl><dt>分类号：</dt><dd>A61L2/22(2006.01)I;A61L2/26(2006.01)I</dd></dl>
+                            <dl><dt>专利代理机构</dt><dd>重庆博观星辉专利代理事务所(特殊普通合伙)</dd></dl>
                             <dl><dt>专利代理师：</dt><dd>张小群</dd></dl>
                         </div>
 
                         <div class="intro">
                             <dl>
                                 <dt>摘要：</dt>
-                                <dd>本实用新型提供了一种可推动式洗片装置，涉及洗片装置技术领域，包括：框架定位组件，所述洗片框架插接在多联动轨道块的内部,多联动轨道块能够控制框架定位组件在伸入液体箱时对胶片实现送片、固定的操作，且框架定位组件在拉出液体箱内部时对胶片实现解除固定、反向推出胶片的操作，使用方便，操作简单，洗片效率大大提高，且胶片在洗片时能够被固定夹条固定在洗片框架的内部，不会因为浮力等外界因素导致胶片固定不稳出现晃动、上浮等现象发生，使用稳定，洗片以及成像质量高，解决了洗片装置在使用时，没有对胶片固定的结构，使用麻烦，洗片效率低，且胶片无法很好的固定，洗片效果较差问题。</dd>
+                                <dd>本实用新型公开一种操作便捷的B超探头消毒器，所述操作便捷的B超探头消毒器包括:消毒器本体，所述消毒器本体内部设有一具有弹性的固定装置；以及承载台，所述承载台设置在所述消毒器本体内部，所述承载台与所述固定装置连接，用以承载消毒液瓶，所述固定装置用以弹性夹持所述消毒液瓶。本实用新型的技术方案解决了现有B超探头消毒器中的消毒液瓶不能快速换取以及连接不牢固的问题。</dd>
                             </dl>
                         </div>
 
@@ -119,10 +119,10 @@
                                 <dt>
                                     <span>
                                         <a
-                                            href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20251109006.png"
+                                            href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20251114001.png"
                                             class="ft cboxElement">
                                             <img
-                                                src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20251109006.png">
+                                                src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20251114001.png">
                                         </a>
                                     </span>
                                 </dt>
