--- a/20251114003.html
+++ b/20251114003.html
@@ -83,7 +83,7 @@
             <div class="w">
                 <div class="detail-main">
                     <div class="detail-top">
-                        <h2 class="title">一种预防低温烫伤的暖宫带</h2>
+                        <h2 class="title">一种内窥镜检测探头</h2>
 
                         <div class="func">
                             <a class="btn sml"title="发明专利">实用新型专利</a>
@@ -94,21 +94,22 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告号：</dt><dd>CN220512992U</dd></dl>
-                            <dl><dt>授权公告日：</dt><dd>2024.02.23</dd></dl>
-                            <dl><dt>申请号：</dt><dd>2023213978159</dd></dl>
-                            <dl><dt>申请日：</dt><dd>2023.05.31</dd></dl>
-                            <dl><dt>专利权人：</dt><dd>佛山市第一人民医院</dd></dl>
-                            <dl><dt>地址：</dt><dd>528200广东省佛山市禅城区岭南大道北81号佛山市第一人民医院</dd></dl>
-                            <dl><dt>发明人：</dt><dd>孙美好;陈火</dd></dl>
-                            <dl><dt>分类号：</dt><dd>A61F7/08(2006.01)I</dd></dl>
-                            <dl><dt></dt><dd>同样的发明创造已同日申请发明专利</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN220207991U</dd></dl>
+                            <dl><dt>授权公告日：</dt><dd>2023.12.19</dd></dl>
+                            <dl><dt>申请号：</dt><dd>2023220441181</dd></dl>
+                            <dl><dt>申请日：</dt><dd>2023.08.01</dd></dl>
+                            <dl><dt>专利权人：</dt><dd>李常军</dd></dl>
+                            <dl><dt>地址：</dt><dd>442600湖北省十堰市郧西县城关镇富康大道32号</dd></dl>
+                            <dl><dt>发明人：</dt><dd>李常军;赵雪;王海波;宋致远;罗岗;张国峰;张明招</dd></dl>
+                            <dl><dt>分类号：</dt><dd>G02B23/24(2006.01)I;H04N23/50(2023.01)I</dd></dl>
+                            <dl><dt>专利代理机构：</dt><dd>重庆博观星辉专利代理事务所(特殊普通合伙)</dd></dl>
+                            <dl><dt>专利代理师：</dt><dd>文超</dd></dl>
                         </div>
 
                         <div class="intro">
                             <dl>
                                 <dt>摘要：</dt>
-                                <dd>本实用新型公开了一种预防低温烫伤的暖宫带，由装置主体和腰带组成，其特征在于，所述装置主体包括若干电热膜及控制模块；所述若干电热膜彼此非叠加地安装于装置主体；所述控制模块用于控制所述若干电热膜以交替通电方式进行电加热。根据本实用新型，用户佩戴及启动暖宫带电热功能后，控制模块控制若干电热膜交替加热，每个电热膜的加热持续时间控制在预置安全时间内，使用户腹部不同的区域轮换获得暖宫功效及同时耗散热量，避免热量在固定区域长时间累积，且控制过程无需依赖人工，从而预防用户低温烫伤，提升产品使用的安全性。</dd>
+                                <dd>本实用新型提供一种内窥镜检测探头，涉及内窥镜检测技术领域，包括蛇骨管，所述蛇骨管的一端螺纹设置有玻璃筒体且玻璃筒体的一端设置有外摄像头，所述蛇骨管与玻璃筒体内穿入设置有钢丝和镜头数据线，所述钢丝的一端与外摄像头的内侧固定连接，所述外摄像头的内侧固定连接有内摄像头，所述玻璃筒体内设置有伸缩机构，所述蛇骨管与玻璃筒体内还穿入设置有光纤，所述玻璃筒体的外表面还固定设置有聚光罩，所述伸缩机构包括固定杆与固定环以及弹簧和移动环。本实用新型外摄像头向移动会带动两个内摄像头移出玻璃筒体，达到对外摄像头后方以及外摄像头周边进行拍摄的作用，从而增加了拍摄视野，降低了外摄像头的盲区。</dd>
                             </dl>
                         </div>
 
@@ -118,10 +119,10 @@
                                 <dt>
                                     <span>
                                         <a
-                                            href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20251114002.png"
+                                            href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20251114003.png"
                                             class="ft cboxElement">
                                             <img
-                                                src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20251114002.png">
+                                                src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20251114003.png">
                                         </a>
                                     </span>
                                 </dt>
