--- a/20251114004.html
+++ b/20251114004.html
@@ -83,7 +83,7 @@
             <div class="w">
                 <div class="detail-main">
                     <div class="detail-top">
-                        <h2 class="title">一种预防低温烫伤的暖宫带</h2>
+                        <h2 class="title">一种用于内窥镜的图像处理传输装置</h2>
 
                         <div class="func">
                             <a class="btn sml"title="发明专利">实用新型专利</a>
@@ -94,21 +94,22 @@
 
                     <div class="detail-row row">
                         <div class="info">
-                            <dl><dt>授权公告号：</dt><dd>CN220512992U</dd></dl>
-                            <dl><dt>授权公告日：</dt><dd>2024.02.23</dd></dl>
-                            <dl><dt>申请号：</dt><dd>2023213978159</dd></dl>
-                            <dl><dt>申请日：</dt><dd>2023.05.31</dd></dl>
-                            <dl><dt>专利权人：</dt><dd>佛山市第一人民医院</dd></dl>
-                            <dl><dt>地址：</dt><dd>528200广东省佛山市禅城区岭南大道北81号佛山市第一人民医院</dd></dl>
-                            <dl><dt>发明人：</dt><dd>孙美好;陈火</dd></dl>
-                            <dl><dt>分类号：</dt><dd>A61F7/08(2006.01)I</dd></dl>
-                            <dl><dt></dt><dd>同样的发明创造已同日申请发明专利</dd></dl>
+                            <dl><dt>授权公告号：</dt><dd>CN221044918U</dd></dl>
+                            <dl><dt>授权公告日：</dt><dd>2024.05.31</dd></dl>
+                            <dl><dt>申请号：</dt><dd>2023220483610</dd></dl>
+                            <dl><dt>申请日：</dt><dd>2023.08.01</dd></dl>
+                            <dl><dt>专利权人：</dt><dd>王海波</dd></dl>
+                            <dl><dt>地址：</dt><dd>442600湖北省十堰市郧西县人民医院东院区消化内镜中心</dd></dl>
+                            <dl><dt>发明人：</dt><dd>王海波;王丹;李常军;孙金健;罗岗;张国峰;张明招</dd></dl>
+                            <dl><dt>分类号：</dt><dd>A61B1/00(2006.01)I;A61B1/04(2006.01)I</dd></dl>
+                            <dl><dt>专利代理机构：</dt><dd>重庆博观星辉专利代理事务所(特殊普通合伙)</dd></dl>
+                            <dl><dt>专利代理师：</dt><dd>文超</dd></dl>
                         </div>
 
                         <div class="intro">
                             <dl>
                                 <dt>摘要：</dt>
-                                <dd>本实用新型公开了一种预防低温烫伤的暖宫带，由装置主体和腰带组成，其特征在于，所述装置主体包括若干电热膜及控制模块；所述若干电热膜彼此非叠加地安装于装置主体；所述控制模块用于控制所述若干电热膜以交替通电方式进行电加热。根据本实用新型，用户佩戴及启动暖宫带电热功能后，控制模块控制若干电热膜交替加热，每个电热膜的加热持续时间控制在预置安全时间内，使用户腹部不同的区域轮换获得暖宫功效及同时耗散热量，避免热量在固定区域长时间累积，且控制过程无需依赖人工，从而预防用户低温烫伤，提升产品使用的安全性。</dd>
+                                <dd>本实用新型属于一种用于内窥镜的图像处理传输装置技术领域，且公开了一种用于内窥镜的图像处理传输装置，包括操作杆，以及操作杆一端固设的连接头，连接头远离操作杆的一端固设有内窥镜，操作杆靠近连接头的一端表面套设有夹紧组件；夹紧组件包括第一夹块的一端转动设有第三夹块，第一夹块的另一端可拆分设有第二夹块，第一夹块的上端固设有镜头连接座，第一夹块与操作杆的连接处固设有可伸缩的图像接收器，操作杆与第一夹块的连接处固设有与图像接收器插接的图像传输器，本实用新型提供了用于内窥镜的图像处理传输装置，具有结构简单安装时方便快捷，并可对不同尺寸的操作杆进行连接的优点。</dd>
                             </dl>
                         </div>
 
@@ -118,10 +119,10 @@
                                 <dt>
                                     <span>
                                         <a
-                                            href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20251114002.png"
+                                            href="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20251114004.png"
                                             class="ft cboxElement">
                                             <img
-                                                src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20251114002.png">
+                                                src="imgs/ws2021/PUBXML/400902/FMSQ/FMSQ_DZGBD/2022100776657/100005/20251114004.png">
                                         </a>
                                     </span>
                                 </dt>
