--- a/20251114001.html
+++ b/20251114001.html
@@ -101,7 +101,7 @@
                             <dl><dt>专利权人：</dt><dd>张琼</dd></dl>
                             <dl><dt>地址：</dt><dd>436000湖北省鄂州市鄂城区滨湖北路12号</dd></dl>
                             <dl><dt>发明人：</dt><dd>张琼;陈士颖;张国勇</dd></dl>
-                            <dl><dt>分类号：</dt><dd>G03D3/08(2006.01)I</dd></dl>
+                            <dl><dt>分类号：</dt><dd>A61L2/22(2006.01)I;A61L2/26(2006.01)I</dd></dl>
                             <dl><dt>专利代理机构</dt><dd>重庆博观星辉专利代理事务所(特殊普通合伙)</dd></dl>
                             <dl><dt>专利代理师：</dt><dd>张小群</dd></dl>
                         </div>
