--- a/20250927001.html
+++ b/20250927001.html
@@ -100,7 +100,7 @@
                             <dl><dt>申请日：</dt><dd>2020.12.30</dd></dl>
                             <dl><dt>专利权人：</dt><dd>薛红阳</dd></dl>
                             <dl><dt>地址：</dt><dd>100000北京市海淀区香山路西小府22号</dd></dl>
-                            <dl><dt>发明人：</dt><dd>薛红阳;王苗苗;周丽娟;曹艳芳;吴哓哓;丁多姿</dd></dl>
+                            <dl><dt>发明人：</dt><dd>薛红阳;王苗苗</dd></dl>
                             <dl><dt>分类号：</dt><dd>A63B23/16(2006.01)I;A63B21/02(2006.01)I</dd></dl>
                             <dl><dt>专利代理机构：</dt><dd>重庆博观星辉专利代理事务所(特殊普通合伙)</dd></dl>
                             <dl><dt>专利代理师：</dt><dd>文超</dd></dl>
